bzr-svn 1.0.5					  UNRELEASED

 BUG FIXES

  * Cope with layouts returning project paths that don't exist.
    (Max Bowsher, Jelmer Vernooij, #638492)

  * Support symlinks being changed into files, when their contents
    are no longer in the cache. (Max Bowsher, #638697)

  * Fix regression in 'bzr missing -v'. (#645360, Jelmer Vernooij)

bzr-svn 1.0.4					  2010-08-30

 BUG FIXES

  * Set file revisions based on history rather than on magic file properties.
    (Jelmer Vernooij, #480102)

  * Cope with invalid svk:merge properties during fetch. 
    (Jelmer Vernooij, #504458)

  * Avoid backtrace when getting 175200 error during log fetch.

  * Warn when inconsistencies between cache and repository are 
    detected. (Jelmer Vernooij, #594872)

  * Cope with non-ascii characters in branch names properly.
    (Jelmer Vernooij, #500519)

  * During incremental "fetching svn revision info", don't print progress info
    is as if it had started afresh (Max Bowsher, #500991)

  * Cope with copying from paths with a # sign in them. (Jelmer Vernooij)

  * Avoid fetching revision info for single unnecessary revision.
    (Jelmer Vernooij)

  * Support revision tracking when copying from root. (Jelmer Vernooij,
     #438928)

  * Fix handling of revision metadata. (Jelmer Vernooij, #612611)

  * Print proper errors on invalid working copies. (Jelmer Vernooij, #404598)

  * Cope with changes to root as a branch path during revision 
    discovery. (Jelmer Vernooij, #616860)

  * Support accessing branches without accessing the repository root.
    Please note that this will only work when the log cache is disabled. 
    (Jelmer Vernooij, #409668)

  * Cope with non-ascii characters in symlink targets.
    (Jelmer Vernooij)

  * Cope with spaces in URLs during connect. (Jelmer Vernooij)

  * Add note about virus scanners accessing temporary files.
    (Jelmer Vernooij, #290110)

 PERFORMANCE

  * Support using any connection when finding UUID, revision properties